# braiins-open

coins/: Cargo.toml
coins/bitcoin/: Cargo.toml
coins/bitcoin/src/: lib.rs  test_blocks.rs
coins/bitcoin/tests/: hash_test.rs
noise-proxy/: Cargo.toml
noise-proxy/.cargo/: config
noise-proxy/config/: sample_config.toml
noise-proxy/src/: connector.rs  dummy_metrics.rs  framing.rs  frontend.rs  lib.rs  main.rs  metrics.rs
protocols/stratum/: Cargo.toml  README.md
protocols/stratum/examples/: initiator.rs  responder.rs
protocols/stratum/sim/: README.md  pool_miner_sim.py  pool_proxy_miner_sim.py  requirements.txt  simulate_and_plot_results.py
protocols/stratum/sim/sim_primitives/: __init__.py  coins.py  hashrate_meter.py  miner.py  mining_params.py  network.py  pool.py  protocol.py  proxy.py
protocols/stratum/sim/sim_primitives/stratum_v1/: messages.py  miner.py  pool.py  proxy.py
protocols/stratum/sim/sim_primitives/stratum_v2/: messages.py  miner.py  pool.py  proxy.py  states.py  types.py
protocols/stratum/src/: error.rs  keytool.rs  lib.rs  payload.rs  test_utils.rs  v1.rs  v2.rs
protocols/stratum/src/test_utils/: common.rs  v1.rs  v2.rs
protocols/stratum/src/v1/: error.rs  framing.rs  messages.rs  rpc.rs  test.rs
protocols/stratum/src/v1/framing/: codec.rs
protocols/stratum/src/v1/messages/: test.rs
protocols/stratum/src/v2/: error.rs  extensions.rs  framing.rs  macros.rs  messages.rs  noise.rs  serialization.rs  telemetry.rs  test.rs  types.rs
protocols/stratum/src/v2/framing/: codec.rs
protocols/stratum/src/v2/messages/: test.rs
protocols/stratum/src/v2/noise/: auth.rs  codec.rs  handshake.rs  negotiation.rs
protocols/stratum/src/v2/noise/auth/: formats.rs
protocols/stratum/src/v2/telemetry/: messages.rs
protocols/wire/: Cargo.toml
protocols/wire/src/: client.rs  connection.rs  framing.rs  lib.rs  messaging.rs  network.rs  proxy.rs  server.rs  split.rs  utils.rs
protocols/wire/src/proxy/: codec.rs  error.rs  mod.rs
protocols/wire/src/proxy/codec/: v1.rs  v2.rs
protocols/wire/src/proxy/codec/v2/: proto.rs
stratum-proxy/: Cargo.toml  README.md  rust-toolchain
stratum-proxy/conf/: broken.toml  insecure.toml  secure.toml  secure2.toml
stratum-proxy/config/: gen_keys.sh  insecure.toml  secure.toml
stratum-proxy/src/: dummy_metrics.rs  error.rs  frontend.rs  lib.rs  main.rs  metrics.rs  protocol.rs  server.rs  translation.rs  util.rs  utils.rs
stratum-proxy/src/server/: controller.rs  peer_address.rs
stratum-proxy/src/translation/: test.rs
stratum-proxy/tests/: basic-server-and-client.rs
stratum-proxy/tests/utils/: mod.rs
utils-rs/async-utils/: Cargo.toml
utils-rs/async-utils/src/: halthandle.rs  halthandle02.rs  halthandle03.rs  lib.rs  maybe_future.rs
utils-rs/logging/: Cargo.toml
utils-rs/logging/src/: lib.rs
utils-rs/logging/tests/: basic.rs  panic.rs
utils-rs/metrics/: Cargo.toml
utils-rs/metrics/src/: dummy.rs  lib.rs  prometheus_registry.rs
utils-rs/scm/: Cargo.toml  README.md
utils-rs/scm/scm/: Cargo.toml
utils-rs/scm/scm-git/: Cargo.toml
utils-rs/scm/scm-git/src/: lib.rs
utils-rs/scm/scm-macros/: Cargo.toml
utils-rs/scm/scm-macros/src/: lib.rs
utils-rs/scm/scm/src/: global.rs  lib.rs  version.rs
utils-rs/scm/src/: global.rs  lib.rs  version.rs
utils-rs/unvariant/: Cargo.toml
utils-rs/unvariant/unvariant/: Cargo.toml
utils-rs/unvariant/unvariant-macros/: Cargo.toml
utils-rs/unvariant/unvariant-macros/src/: extensions.rs  handler.rs  id.rs  lib.rs  unvariant.rs
utils-rs/unvariant/unvariant-tests/: Cargo.toml
utils-rs/unvariant/unvariant-tests/src/: lib.rs
utils-rs/unvariant/unvariant-tests/tests/: handler.rs  id.rs  unvariant.rs
utils-rs/unvariant/unvariant-tests/tests/common/: frame.rs  mod.rs  str_frame.rs
utils-rs/unvariant/unvariant/src/: lib.rs  macro_private.rs
