[package]
name = "ii-stratum-proxy"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
clap = "2.33.0"
bitcoin_hashes = "0.3.2"
uint = "0.5.0"
ctrlc = "3.1.0"
serde = "1.0.114"
serde_json = "1.0.39"
futures = { version = "0.3.1", features = ["compat"] }
async-trait = "0.1"
bytes = "0.5"
tokio = { version = "0.2.10", features = ["full"] }
ii-stratum = { path = "../protocols/stratum" }
ii-wire = { path = "../protocols/wire", features = ["serde"]}
ii-async-utils = { path = "../utils-rs/async-utils" }
ii-logging = { path = "../utils-rs/logging" }
ii-unvariant = { path = "../utils-rs/unvariant/unvariant" }
structopt = "0.3"
thiserror = "1.0.20"
toml = "0.5.6"
anyhow = "1.0.31"

[features]
v2json = ["ii-stratum/v2json"]
