[package]
name = "ii-stratum-proxy"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
ii-stratum = { path = "../protocols/stratum" }
ii-wire = { path = "../protocols/wire", features = ["serde"]}
ii-async-utils = { path = "../utils-rs/async-utils" }
ii-logging = { path = "../utils-rs/logging" }
ii-metrics = { path = "../utils-rs/metrics", optional = true}
ii-noise-proxy = { path = "../noise-proxy" }
ii-unvariant = { path = "../utils-rs/unvariant/unvariant" }
ii-scm = { path = "../utils-rs/scm/scm" }
futures = "0.3.7"
async-trait = "0.1.41"
tokio = { version = "0.3.2", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["codec"] }
bytes = "0.6.0"
thiserror = "1.0.21"
anyhow = "1.0.33"
arrayvec = "0.5.2"
clap = "2.33.3"
bitcoin_hashes = "0.9.4"
primitive-types = "0.7.2"
serde = "1.0.117"
serde_json = "1.0.59"
structopt = "0.3.20"
toml = "0.5.7"
prometheus = { version = "0.11", features = ["process"], optional = true }

[features]
v2json = ["ii-stratum/v2json"]
prometheus_metrics = ["prometheus", "ii-metrics"]
