[package]
name = "ii-bitcoin"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bitcoin_hashes = "0.9.4"
lazy_static = "1.4.0"
packed_struct = "0.3.1"
packed_struct_codegen = "0.3.1"
primitive-types = "0.7.2"
thiserror = "1.0.24"
