[package]
name = "ii-stratum"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
failure = "0.1.5"
thiserror = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
byteorder = "1.2.7"
hex = "0.3.2"
# Temporarily disabled, see v1 TODO
#serde_tuple = "0.2.2"
packed_struct = "0.3"
packed_struct_codegen = "0.3"
bitcoin_hashes = "0.3.2"
snow = "0.7.0-alpha4"
uint = "0.5.0"
async-trait = "0.1.17"
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-wire = { path = "../wire" }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-logging = { path = "../../utils-rs/logging" }

[dev-dependencies]
byte_string = "1.0.0"

[features]
v2json = []

# failure caused a problem when they used private API from quote:
# https://users.rust-lang.org/t/failure-derive-compilation-error/39062
[patch.crates-io.failure]
path = "../../utils-rs/failure"
