[package]
name = "ii-stratum"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
name = "ii-stratum-keytool"
path = "src/keytool.rs"
#test = false
bench = false

[dependencies]
thiserror = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
byteorder = "1.2.7"
hex = "0.3.2"
# Temporarily disabled, see v1 TODO
#serde_tuple = "0.2.2"
packed_struct = "0.3"
packed_struct_codegen = "0.3"
bitcoin_hashes = "0.3.2"
snow = {version = "0.7.0", features = ["ring-accelerated"]}
uint = "0.5.0"
futures = "0.3.5"
bytes = "0.5"
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
async-trait = "0.1.17"
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-wire = { path = "../wire" }
ii-async-utils = { path = "../../utils-rs/async-utils" }
ii-logging = { path = "../../utils-rs/logging" }
structopt = "0.3"
rand = "0.7.3"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
bs58 = { version ="0.3.0", features = ["check"] }
anyhow = "1.0"

[dev-dependencies]
byte_string = "1.0.0"

[features]
v2json = []
