[package]
name = "ii-stratum"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
name = "ii-stratum-keytool"
path = "src/keytool.rs"
#test = false
bench = false

[dependencies]
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-wire = { path = "../wire" }
ii-async-utils = { path = "../../utils-rs/async-utils" }
ii-logging = { path = "../../utils-rs/logging" }
ii-unvariant = { path = "../../utils-rs/unvariant/unvariant"}
futures = "0.3.5"
async-trait = "0.1"
tokio = { version = "0.3.2", features = ["full"] }
tokio-util = { version = "0.4.0", features = ["codec"] }
bytes = "0.5.6"
thiserror = "1.0.21"
anyhow = "1.0.33"
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_repr = "0.1.6"
byteorder = "1.3.4"
hex = "0.4.2"
# Temporarily disabled, see v1 TODO
#serde_tuple = "0.2.2"
packed_struct = "0.3.1"
packed_struct_codegen = "0.3.1"
bitcoin_hashes = "0.9.4"
snow = {version = "0.7.2", features = ["ring-accelerated"]}
primitive-types = "0.7.2"
structopt = "0.3.20"
rand = "0.7.3"
# TODO: Update ed25519-dalek when stable 1.0.0 is out
#ed25519-dalek = { version = "1.0.1", features = ["serde"] }
ed25519-dalek = { version = "=1.0.0-pre.3", features = ["serde"] }
bs58 = { version ="0.3.1", features = ["check"] }

[dev-dependencies]
byte_string = "1.0.0"

[features]
v2json = []
