[package]
name = "ii-wire"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bytes = { version = "1.0.1", optional = true }
bytes06 = { package = "bytes", version = "0.6.0", optional = true }
bytes05 = { package = "bytes", version = "0.5.6", optional = true }
futures = "0.3.7"
tokio = { version = "1.2.0", features = ["full"], optional = true }
tokio-util = { version = "0.6.3", features = ["codec"], optional = true }
tokio03-core = { package = "tokio", version = "0.3.2", features = ["full"], optional = true }
tokio03-util = { package = "tokio-util", version = "0.5.0", features = ["codec"], optional = true }
tokio02-core = { package = "tokio", version = "0.2.22", features = ["full"], optional = true }
tokio02-util = { package = "tokio-util", version = "0.3.1", features = ["codec"], optional = true }
pin-project = "1.0.1"
thiserror = "1.0.21"
serde = { version = "1.0.117", optional = true, features = ["derive"] }
ii-logging = { path = "../../utils-rs/logging" }

[dev-dependencies]
serde_json = "1.0.59"

[features]
default = ["tokio12"]
tokio12 = ["tokio", "tokio-util", "bytes"]
tokio03 = ["tokio03-core", "tokio03-util", "bytes06"]
tokio02 = ["tokio02-core", "tokio02-util", "bytes05"]
