[package]
name = "ii-async-utils"
version = "0.2.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
futures = "0.3.7"
pin-project-lite = "0.2.0"
tokio = { version = "0.3.2", features = ["full"], optional = true }
tokio02 = { package = "tokio", version = "0.2.22", features = ["full"], optional = true }

[features]
default = ["tokio03"]
tokio03 = ["tokio"]
