[package]
name = "ii-logging"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
slog = { version = "~2.4", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4"
slog-async = "2.3"
slog-envlogger = "2.1.0"

[dev-dependencies]
tempfile = "3.1.0"
