[package]
name = "ii-logging"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0" # slog-envlogger = { path = "../envlogger" }

[dev-dependencies]
tempfile = "3.1.0"
