[package]
name = "ii-scm"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Utility for handling Software Configuration Management (SCM)"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ii-scm-macros = { path = "../scm-macros" }
once_cell = "1.2"
