[package]
name = "ii-unvariant-macros"
version = "0.1.0"
authors = ["Vojtech Kral <vojtech.kral@braiins.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = { version = "1.0.33", features = ["full", "visit-mut", "extra-traits"] }
proc-macro-hack = "0.5.11"
